--- a/UI_Test/src/main/resources/templates/home.html
+++ b/UI_Test/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" layout:decorate="layout">
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="layout.html">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
